// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItemContainer /> conditionally add the seperator between name and date date only 1`] = `
<div
  data-testid="sectionItemContainer"
>
  <h1
    class="mb-1 font-bold text-lg leading-5"
    data-testid="itemTitle"
  >
    President
  </h1>
  <div
    class="italic mb-1"
    data-testid="byline"
  >
    <span
      data-testid="sectionItemDates"
    >
      2013
       - 
      2014
    </span>
  </div>
  <div
    data-testid="sectionItemDetails"
  >
    <p>
      Description...
    </p>
  </div>
</div>
`;

exports[`<ItemContainer /> education item education item 1`] = `
<div
  data-testid="sectionItemContainer"
>
  <h1
    class="mb-1 font-bold text-lg leading-5"
    data-testid="itemTitle"
  >
    Bachelor of Software Development
  </h1>
  <div
    class="italic mb-1"
    data-testid="byline"
  >
    <span
      data-testid="itemSubtitle"
    >
      University
    </span>
     | 
    <span
      data-testid="sectionItemDates"
    >
      2011
       - 
      2013
    </span>
  </div>
  <div
    data-testid="sectionItemDetails"
  >
    <ul>
      

      <li>
        DB1101 - Basic SQL
      </li>
      

    </ul>
  </div>
</div>
`;

exports[`<ItemContainer /> education item no courses? get nothing 1`] = `
<div
  data-testid="sectionItemContainer"
>
  <h1
    class="mb-1 font-bold text-lg leading-5"
    data-testid="itemTitle"
  >
    Bachelor of Software Development
  </h1>
  <div
    class="italic mb-1"
    data-testid="byline"
  >
    <span
      data-testid="itemSubtitle"
    >
      University
    </span>
     | 
    <span
      data-testid="sectionItemDates"
    >
      2011
       - 
      2013
    </span>
  </div>
</div>
`;

exports[`<ItemContainer /> experience item experience item 1`] = `
<div
  data-testid="sectionItemContainer"
>
  <h1
    class="mb-1 font-bold text-lg leading-5"
    data-testid="itemTitle"
  >
    President
  </h1>
  <div
    class="italic mb-1"
    data-testid="byline"
  >
    <a
      class="underline text-[#4d368c]"
      href="https://duckduckgo.com"
    >
      <span
        data-testid="itemSubtitle"
      >
        Company
      </span>
    </a>
     | 
    <span
      data-testid="sectionItemDates"
    >
      2013
       - 
      2014
    </span>
  </div>
  <div
    data-testid="sectionItemDetails"
  >
    <p>
      Description...
    </p>
  </div>
</div>
`;
